methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:18: error: not found: type int
def colorier(x:Int, y:int, c:Color) {
                      ^